Avance de tareas de colas con sockets

--- a/src/app/pages/escritorio/escritorio.component.html
+++ b/src/app/pages/escritorio/escritorio.component.html
@@ -2,6 +2,6 @@
 <h4>Atendiendo a <small>....</small></h4>
 <hr>
 
-<button class="btn btn-primary btn-lg">
+<button class="btn btn-primary btn-lg" (click)="atenderSiguienteTicket()">
     Atender siguiente ticket
 </button>
